# Cadastro_de_Clientes_Streamlit

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
